crates/test-harness/fixtures/test262-lite/fail/parse/throw-no-expression.js
/*---
description: throw statement requires expression
negative:
  phase: parse
  type: SyntaxError
---*/
throw;
